# Cinfra

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/include/: mr_common.h  mr_mutex.h
src/lib/: CMakeLists.txt  mr_common.c  mr_mutex.c
src/test/: CMakeLists.txt  mr_mutex_test.c  mr_thread_test.c
